// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<span
  className="brew-Typography brew-Typography--display-block"
>
  Foo
</span>
`;

exports[`renders correctly 2`] = `
<span
  className="brew-Typography brew-Typography--display-block brew-Typography--align-left brew-Typography--color-secondary brew-Typography--shouldTruncate foo"
>
  <span>
    some child elements
  </span>
</span>
`;

exports[`renders correctly with all props 1`] = `
<span
  className="brew-Typography brew-Typography--display-block brew-Typography--align-left brew-Typography--color-secondary brew-Typography--shouldTruncate foo"
>
  <span>
    some child elements
  </span>
</span>
`;
